:recycle: Simplify layer execution. Layers are resources to be attached, rather than a middleware system.

--- a/config.yaml
+++ b/config.yaml
@@ -326,6 +326,7 @@ layers:
   shift:
     # Runs the action before any lower layers
     extends: base
+    transparent: true
     actions:
       - type: press
         key: shift
@@ -392,3 +393,8 @@ layers:
         type: single
         actions:
           - type: poplayer
+      - code: xxxoo
+        type: single
+        actions:
+          - type: pushlayer
+            layer: shift
